增加了签到功能

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -34,5 +34,6 @@
   "aoLan_system": "AoLan",
   "sports_system": "Sports",
   "lab_system": "Lab",
-  "graduation_system": "Graduation"
+  "graduation_system": "Graduation",
+  "sign_in_system":"Sign In"
 }
