围绕课表页的一系列改动

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -8,6 +8,7 @@
   "classroom": "Classroom",
   "gpa": "GPA",
   "semester": "Select the semester",
+  "map": "Map",
   "bus": "Bus",
   "mon": "Mon",
   "tue": "Tue",
@@ -16,16 +17,27 @@
   "fri": "Fri",
   "sat": "Sat",
   "sun": "Sun",
+  "classMore": "More",
+
   "about": "About",
   "feedback": "Feedback",
   "community": "Community",
   "share": "Share",
+  "schoolAreaValue": "schoolArea",
   "setting": "Setting",
   "update": "Check for Updates",
+  "class_visible": "Other Weeks Classes Visible",
   "auto_update": "Auto-Update Guohe",
   "version": "Version is :",
   "account": "Switch Account",
   "language": "Language",
+  "tips": "Tips",
+  "bg_img_reset": "The schedule background image has been reset",
+  "img_pick_tip": "Image picked success",
+  "quit_tip": "You will logout and clear all data in local",
+  "scheduleBackground": "Schedule background",
+  "long_press_to_reset" : "Long press to reset the schedule background",
+
   "sport": "Sport/Club",
   "calendar": "Calendar",
   "vpn": "VPN",
