--- a/lib/l10n/intl_zn.arb
+++ b/lib/l10n/intl_zn.arb
@@ -8,24 +8,36 @@
   "classroom": "空教室",
   "gpa": "成绩绩点",
   "semester": "请选择学期",
+  "map": "长山地图",
   "bus": "校车",
-  "mon": "周一",
-  "tue": "周二",
-  "wen": "周三",
-  "thus": "周四",
-  "fri": "周五",
-  "sat": "周六",
-  "sun": "周日",
+  "mon": "一",
+  "tue": "二",
+  "wen": "三",
+  "thus": "四",
+  "fri": "五",
+  "sat": "六",
+  "sun": "日",
+  "classMore": "备注",
+
   "about": "关于果核",
   "feedback": "反馈",
   "community": "社群",
   "share": "分享",
   "setting": "设置",
+  "schoolAreaValue": "校区",
   "update": "检查更新",
   "auto_update": "启动时检查更新",
   "version": "当前版本",
   "account": "切换账号",
   "language": "设置语言",
+  "class_visible": "其它周次课程是否可见",
+  "tips": "提示",
+  "bg_img_reset": "课表背景图片已经被重置",
+  "img_pick_tip": "图片选取成功",
+  "quit_tip": "你将会退出并清除所有本地缓存",
+  "scheduleBackground": "课表背景",
+  "long_press_to_reset" : "长按重置课表背景",
+
   "sport": "早操俱乐部",
   "calendar": "校历",
   "vpn": "校园VPN",
